Partial fix for tree list item jiggle when hovering on glyph at start of line (jiggle now confined to glyph). Lines which wrap around still have the problem, and glyph size still changes on hover (intentionally?).

--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -107,3 +107,7 @@ aside.sidebar i {
     background-color:white;
     color:#428BCA;
 }
+
+.treeLabel {
+  min-height: 26px;
+}
